# LedFx-Builds

./: .gitignore  LICENSE  README.md  dev.bat  init.bat  install.bat  mac-notray.sh  mac.spec
.github/workflows/: BuildAndroid.yml  BuildAndroid.yml_OFF  BuildAndroidMatrix.yml  BuildChain.yml  BuildPipeline.yml  BuildPipeline2.yml  BuildPipelineNew.yml  BuildPipelineNewer.yml  BuildPipelineUV.yml  BuildSongDetector.yml  DiscordRelease.yml  DynamicMatrix.yml  GenerateKeystore.yml_OFF  NewBuild.yml  NewPipeline.yml  NextTest.yml  NextTest2.yml  PlzFix.yml  PlzFix2.yml  TestMac.yml  __tool.yml_OFF  aubio.yml  build-core.yml  build-ledfx-releases  build-ledfx-releases.yml  build-ledfx.yml  build-mac.yml  build-test  build-test.yml  build-win.yml  build.yml  builds.yml  dev.yml  discordtest.yml  new-build.yml  prepare.yml  test-build.yml  test_android.yml  tool.yml  windows.yml
tools/: Readme.md  camera_android.patch  cors.patch  mac-notray.md  mac-tray.sh  mac.sh  sentry.patch  sentry_android.patch  utils.patch
tools/linux/: disable_ledfx_ssl_linux.sh  enable_ledfx_ssl_linux.sh  yzlinux.spec
tools/mac/: aubio-0.4.9-cp39-cp39-macosx_10_9_x86_64.whl  disable_ledfx_ssl_mac.sh  (+8 more)
tools/song-detector/: .gitignore  MACOS-IMPLEMENTATION.md  README.md  blade-song-detector.py  blade-song-detector.spec  build.bat  dev.bat  entitlements.plist  install.bat  pyproject.toml  render-album-art.py  song-detector-monitor.py  song-detector-plus.py  song-detector-plus.spec  song-detector.py  song-detector.spec
tools/song-detector/MediaRemoteAdapter.framework/Versions/A/: MediaRemoteAdapter
(+27 files in other folders)
